--- a/src/app/modules/ticktock/components/ticktock/ticktock.component.html
+++ b/src/app/modules/ticktock/components/ticktock/ticktock.component.html
@@ -1,24 +1,15 @@
-<div class="flex-wrapper">
-  <div class="ticktock" id="pad">
-    @for (row of dimension; track $index; let i = $index) { @for (column of
-    dimension; track $index; let j = $index) {
-    <div
-      class="item flex-wrapper"
-      id="wr{{ row + column }}"
-      (click)="makeMove(row, column)"
-    >
-      <div class="flex-wrapper" id="wr{{ row + column }}svg"></div>
-      <div>
-        <app-chose
-          [idInp]="row + column"
-          (playerOutput)="getPlayerInfo($event)"
-        ></app-chose>
-      </div>
-    </div>
-    } }
+<div class="wr-f">
+  <div *ngIf="showStart" class="start">
+    <app-start-game (showChose)="getShowChose()"></app-start-game>
   </div>
-</div>
 
-<div class="flex-erapper">
-  <div class="btn" (click)="startGame()">start</div>
+  <div *ngIf="showChose" class="chose">
+    <app-game-style
+      (outputShowGamePad)="getShowGamePad($event)"
+    ></app-game-style>
+  </div>
+
+  <div *ngIf="showGamePad" class="game-pad">
+    <app-gameboard></app-gameboard>
+  </div>
 </div>
