--- a/src/app/modules/ticktock/components/ticktock/ticktock.component.scss
+++ b/src/app/modules/ticktock/components/ticktock/ticktock.component.scss
@@ -1,66 +1,8 @@
-.ticktock {
-  margin: 1rem auto;
-  padding: 0.5rem;
+.wr-f {
+  margin: 1em auto;
+  padding: 2em 1em;
+  width: clamp(250px, 100%, 600px);
+  height: clamp(150px, 100vh, 400px);
 
-  border: 2px solid #000;
-
-  display: grid;
-  gap: 0.5rem;
-  grid-template-areas:
-    ". . ."
-    ". . ."
-    ". . .";
-
-  background-color: var(--clr-dark);
-}
-
-.item {
-  position: relative;
-
-  margin: auto;
-  width: 100px;
-  height: 100px;
-
-  border: 1px solid #000;
-  border-radius: 1rem;
-
-  background-color: var(--clr-light);
-  overflow: hidden;
-
-  font-size: 3rem;
-}
-
-.item:hover {
-  cursor: pointer;
-  background-color: #bdbdbd;
-}
-
-.shoeChose {
-  display: none;
-
-  width: 80%;
-  height: 65%;
-
-  align-items: center;
-  justify-content: space-between;
-
-  position: absolute;
-
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  background-color: burlywood;
-
-  font-size: 2rem;
-
-  border: 0;
-  padding: 0;
-}
-
-@media (max-width: 400px) {
-  .item {
-    width: 50px;
-    height: 50px;
-  }
+  background-color: bisque;
 }
