continue working on tictoc component

--- a/src/app/modules/ticktock/components/game-style/game-style.component.html
+++ b/src/app/modules/ticktock/components/game-style/game-style.component.html
@@ -1,5 +1,5 @@
 <div class="wr-f">
-  <h2 class="title">Chose opponent:</h2>
+  <h2 class="title">Chose oponent:</h2>
   <div class="cell friend" (click)="setGameStyle('player')">Friend</div>
   <div class="cell computer" (click)="setGameStyle('computer')">Computer</div>
   <div class="cell online" (click)="setGameStyle('online')">Online</div>
