--- a/src/app/modules/ticktock/components/start-game/start-game.component.scss
+++ b/src/app/modules/ticktock/components/start-game/start-game.component.scss
@@ -18,6 +18,11 @@
   background-color: burlywood;
 }
 
+.startButton:hover {
+  cursor: pointer;
+  background-color: darkorange;
+}
+
 hr {
   margin: 1em auto;
   width: 80%;
