--- a/src/app/modules/ticktock/components/game-style/game-style.component.scss
+++ b/src/app/modules/ticktock/components/game-style/game-style.component.scss
@@ -12,5 +12,16 @@
   min-height: 60px;
   min-width: 250px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   border: 1px solid #000;
+}
+
+.cell:hover {
+  cursor: pointer;
+  font-weight: bolder;
+
+  background-color: aquamarine;
 }
