--- a/src/app/modules/ticktock/components/ticktock/ticktock.component.html
+++ b/src/app/modules/ticktock/components/ticktock/ticktock.component.html
@@ -17,6 +17,6 @@
   </div>
 
   <div *ngIf="showGamePad">
-    <app-gameboard></app-gameboard>
+    <app-gameboard (endGameOutput)="getEndGame($event)"></app-gameboard>
   </div>
 </div>
