start working on play with computer

--- a/src/app/modules/ticktock/components/gameboard/gameboard.component.html
+++ b/src/app/modules/ticktock/components/gameboard/gameboard.component.html
@@ -1,5 +1,5 @@
 <div class="wr-f">
-  <div class="move"><p>Your move - <b>{{activePlayer().name}}</b></p></div>
+  <div class="move"><p>Your move - <b>{{playerName()}}</b></p></div>
   <div class="ticktock" id="pad">
     @for (row of dimension; track $index; let i = $index) { @for (column of
     dimension; track $index; let j = $index) {
@@ -11,7 +11,7 @@
     <div class="winner" id="winner">
       <div class="block">
         <h2 id="active-name">
-          {{ activePlayer().name }}
+          {{ playerName() }}
         </h2>
         <h3>You Win!!!</h3>
       </div>
