recreating TicToc module

--- a/src/app/modules/about/components/about/about.component.html
+++ b/src/app/modules/about/components/about/about.component.html
@@ -1,1 +1,13 @@
-<app-ticktock></app-ticktock>
+<div class="about">
+  <div class="about__item"><app-date-picker-ge></app-date-picker-ge></div>
+  <!-- <div class="about__item"><app-ticktock></app-ticktock></div> -->
+  <div class="about__item">
+    <div class="tictoc">
+      <h2>
+        <span class="tic">Tic </span>
+        <span class="toc">Toc</span>
+      </h2>
+      <div class="play">PLAY</div>
+    </div>
+  </div>
+</div>
