--- a/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.scss
+++ b/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.scss
@@ -1,3 +1,9 @@
+.wr-f {
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: rgb(174, 182, 179);
+}
+
 .picker {
   --clr-boxShadow1: rgb(139, 138, 138);
   --clr-background1: rgb(236, 239, 253);
