working on new tictoc styling

--- a/src/app/modules/about/components/about/about.component.html
+++ b/src/app/modules/about/components/about/about.component.html
@@ -7,7 +7,9 @@
         <span class="tic">Tic </span>
         <span class="toc">Toc</span>
       </h2>
-      <div class="play">PLAY</div>
+      <div class="play" routerLink="tictoc">PLAY</div>
     </div>
   </div>
 </div>
+
+<router-outlet></router-outlet>
