--- a/src/app/modules/tictoc/components/tictoc/tictoc.component.html
+++ b/src/app/modules/tictoc/components/tictoc/tictoc.component.html
@@ -1,9 +1,14 @@
 <p>tictoc works!</p>
 
 <div class="tictoc-board">
-  <div *ngIf="startGame()" class="start-button" (click)="startGame.set(false)">
+  <div *ngIf="!gameStarted" class="start-button" (click)="startGame()">
     Start Game
   </div>
 
-  <app-game-info *ngIf="!startGame()"></app-game-info>
+  <app-game-info
+    *ngIf="showGameInfo"
+    (closeInfoOutput)="getCloseInfo()"
+  ></app-game-info>
+
+  <app-game-board></app-game-board>
 </div>
